--- a/authen.css
+++ b/authen.css
@@ -63,7 +63,12 @@ body {
   /* height: 100vh; */
   padding-left: 7.5rem;
 }
+#box_authen {
+  transition: all;
+  transition-duration: 500ms;
+}
 .login_header {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -74,8 +79,9 @@ body {
   flex-shrink: 0;
 }
 .login_content {
-  display: inline-flex;
-  flex-direction: column;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
   align-items: center;
   gap: var(--Spacing-Spacing---3, 0.75rem);
 }
@@ -120,6 +126,11 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: 120%;
+}
+.login_text_singin_note {
+  width: 100%;
+  margin-top: 0.75rem;
+  text-align: center;
 }
 .login_text_singin_link {
   color: var(--BLUE, #0084ff);
@@ -338,12 +349,12 @@ body {
 /* dang ky */
 .singin_box_title {
   color: var(--greyscaletext-90, #1d1d1d);
-  text-align: center;
   font-family: "SF Pro Display";
   font-size: 3rem;
   font-style: normal;
   font-weight: 600;
   line-height: 110%;
+  width: 100%;
 }
 .singin_input_name {
   border-radius: 0.25rem;
@@ -363,17 +374,35 @@ body {
   line-height: 120%;
 }
 .login_banner_singin {
+  position: absolute;
+  top: 0;
+  right: 0;
   width: 50.5rem;
-  height: 44.25rem;
+  height: 100%;
   flex-shrink: 0;
 }
-
+#box_authen_step2 {
+  margin-left: 7.5rem;
+  opacity: 0;
+  padding-bottom: 1.62rem;
+  transition: all;
+  transition-duration: 500ms;
+}
 @media (max-width: 767px) {
   .login_banner_singin {
     display: none;
   }
+  #box_authen {
+    padding-bottom: 3rem;
+    padding-right: 0.25rem;
+  }
   .singin_input_name {
     width: 100%;
+  }
+  #box_authen_step2 {
+    display: none;
+    margin-left: 0rem;
+    padding-right: 0.75rem;
   }
 }
 
@@ -403,7 +432,7 @@ body {
   line-height: 120%;
 }
 .singinstep_warper_check {
-  display: inline-flex;
+  display: flex;
   align-items: center;
   gap: 0.625rem;
   margin-top: 1.25rem;
@@ -570,4 +599,41 @@ body {
   font-weight: 600;
   line-height: 120%;
   white-space: nowrap;
+}
+.switch {
+  display: inline-block;
+  position: relative;
+  width: 50px;
+  height: 25px;
+  border-radius: 20px;
+  background: #dfd9ea;
+  transition: background 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+  vertical-align: middle;
+  cursor: pointer;
+}
+.switch::before {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 2px;
+  width: 22px;
+  height: 22px;
+  background: #fafafa;
+  border-radius: 50%;
+  transition: left 0.28s cubic-bezier(0.4, 0, 0.2, 1),
+    background 0.28s cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.switch:active::before {
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.28), 0 0 0 20px rgba(128, 128, 128, 0.1);
+}
+input:checked + .switch {
+  background: #72da67;
+}
+input:checked + .switch::before {
+  left: 27px;
+  background: #fff;
+}
+input:checked + .switch:active::before {
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.28), 0 0 0 20px rgba(0, 150, 136, 0.2);
 }
